Correction of segmentmap, tensorboard logging & update environment

--- a/notebooks/train_detector.ipynb
+++ b/notebooks/train_detector.ipynb
@@ -36,16 +36,36 @@
     "from astropy.io import fits\n",
     "import pandas as pd\n",
     "from astropy.wcs import WCS\n",
-    "import dask.array as da\n",
     "\n",
     "from utils.data.segmentmap import create_from_files\n",
     "from utils import filename\n",
     "\n",
     "name = 'dev_s'\n",
     "segmentmap = create_from_files(name)\n",
-    "hi_data = da.from_array(fits.getdata(filename.data.sky(name)))\n",
+    "hi_data = fits.getdata(filename.data.sky(name)).T\n",
     "header = fits.getheader(filename.data.sky(name))\n",
     "df = pd.read_csv(filename.data.true(name), sep=' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Power transform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "a = 100\n",
+    "for i in range(hi_data.shape[-1]):\n",
+    "    hi_data[:, :, i] = (hi_data[:, :, i] - hi_data[:, :, i].min()) / (\n",
+    "            np.percentile(hi_data[:, :, i], 99.9) - hi_data[:, :, i].min())\n",
+    "    hi_data[:, :, i] = (np.power(a, hi_data[:, :, i]) - 1) / a"
    ]
   },
   {
@@ -61,10 +81,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.data.generating import create_data_set_dict\n",
+    "from utils.data.generating import create_datacube_set_dict\n",
+    "import numpy as np\n",
     "\n",
-    "dataset = create_data_set_dict(df, hi_data, segmentmap, WCS(header), .5, side_length=32,\n",
-    "                               precuation=100, freq_band=32, spatial_points=1)"
+    "cube_dim = np.array([32,32,32])\n",
+    "empty_cube_dim = np.array([64,64,64])\n",
+    "dataset = create_datacube_set_dict(df, hi_data, segmentmap, WCS(header), header, .5, cube_dim, empty_cube_dim)"
    ]
   },
   {
@@ -137,16 +159,17 @@
    "source": [
     "import pytorch_lightning as pl\n",
     "from pytorch_lightning.loggers.tensorboard import TensorBoardLogger\n",
-    "from pytorch_toolbelt.losses import SoftBCEWithLogitsLoss\n",
+    "from pytorch_toolbelt.losses import BinaryLovaszLoss\n",
     "from pytorch_lightning.loggers import TensorBoardLogger\n",
     "from datetime import datetime\n",
     "\n",
     "from models.segmentation import Segmenter\n",
     "\n",
-    "segmenter = Segmenter(model, SoftBCEWithLogitsLoss(), train, test)\n",
     "version = datetime.now().strftime(\"%Y/%m/%d %H:%M:%S\")\n",
     "logger = TensorBoardLogger(\"tb_logs\", name=\"segmenter\", version=version)\n",
-    "trainer = pl.Trainer(max_epochs=100, gpus=1, logger=logger)"
+    "segmenter = Segmenter(model, BinaryLovaszLoss(), train, test, logger)\n",
+    "\n",
+    "trainer = pl.Trainer(max_epochs=500, gpus=1, logger=logger)"
    ]
   },
   {
@@ -158,20 +181,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainer.fit(segmenter)"
    ]
