Memory efficient creation of dataset

--- a/notebooks/train_detector.ipynb
+++ b/notebooks/train_detector.ipynb
@@ -33,25 +33,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from astropy.io import fits\n",
     "import pandas as pd\n",
-    "from astropy.wcs import WCS\n",
     "\n",
     "from utils.data.segmentmap import create_from_files\n",
     "from utils import filename\n",
     "\n",
     "name = 'dev_s'\n",
-    "segmentmap = create_from_files(name)\n",
-    "hi_data = fits.getdata(filename.data.sky(name)).T\n",
-    "header = fits.getheader(filename.data.sky(name))\n",
+    "segmentmap, allocation_dict = create_from_files(name, regenerate=False)\n",
     "df = pd.read_csv(filename.data.true(name), sep=' ')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Power transform"
    ]
   },
   {
@@ -60,12 +49,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "a = 100\n",
-    "for i in range(hi_data.shape[-1]):\n",
-    "    hi_data[:, :, i] = (hi_data[:, :, i] - hi_data[:, :, i].min()) / (\n",
-    "            np.percentile(hi_data[:, :, i], 99.9) - hi_data[:, :, i].min())\n",
-    "    hi_data[:, :, i] = (np.power(a, hi_data[:, :, i]) - 1) / a"
+    "from utils.data.generating import create_datacube_set_dict\n",
+    "\n",
+    "cube_dim = (32, 32, 32)\n",
+    "empty_cube_dim = (64, 64, 64)\n",
+    "dataset = create_datacube_set_dict(df, filename.data.sky(name), segmentmap, allocation_dict, .5, cube_dim, empty_cube_dim, 5)"
    ]
   },
   {
@@ -86,7 +74,7 @@
     "\n",
     "cube_dim = np.array([32,32,32])\n",
     "empty_cube_dim = np.array([64,64,64])\n",
-    "dataset = create_datacube_set_dict(df, hi_data, segmentmap, WCS(header), header, .5, cube_dim, empty_cube_dim)"
+    "dataset = create_datacube_set_dict(df, hi_data, segmentmap, .5, cube_dim, empty_cube_dim)"
    ]
   },
   {
