Add minmax transform, extend logged metrics and save models

--- a/notebooks/tensorboard.ipynb
+++ b/notebooks/tensorboard.ipynb
@@ -11,6 +11,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kill 11394"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -18,11 +27,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-af344e81bf8c57a\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-12a33f3131f4eb\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-af344e81bf8c57a\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-12a33f3131f4eb\");\n",
        "          const url = new URL(\"https://hhkansso.jupyter.cscs.ch/hub/user-redirect/proxy/6006/\", window.location);\n",
        "          const port = 0;\n",
        "          if (port) {\n",
