--- a/notebooks/create_dataset.ipynb
+++ b/notebooks/create_dataset.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "size = 'dev_l'\n",
     "cube_side = 32\n",
-    "transform = 'power'\n",
+    "transform = 'minmax'\n",
     "prob = 50\n",
     "splitsize  = 60"
    ]
@@ -63,7 +63,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c6bcd54be8c4b548c7e18cbfc7c8d98",
+       "model_id": "d823e1de05b24a3191d9c60206f400e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -79,13 +79,6 @@
      "output_type": "stream",
      "text": [
       "WARNING: Could not memory map array with mode='readonly', falling back to mode='denywrite', which means that the array will be read-only [astropy.io.fits.file]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5155 4918\n"
      ]
     }
    ],
@@ -105,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c5ce9d7afa84255a816c27206db8c5f",
+       "model_id": "26e1866f33d54fe68e0b627bd6b0c85e",
        "version_major": 2,
        "version_minor": 0
       },
