Segmentmaps as interpolation between rigid body and full cylinder & update environment

--- a/notebooks/create_dataset.ipynb
+++ b/notebooks/create_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,67 +57,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d823e1de05b24a3191d9c60206f400e7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/11112 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Could not memory map array with mode='readonly', falling back to mode='denywrite', which means that the array will be read-only [astropy.io.fits.file]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from utils.data.generating import split_by_size\n",
     "\n",
     "galax_prob = prob / 100\n",
     "\n",
-    "splitted_datasets = split_by_size(df, fname, segmentmap, allocation_dict, galax_prob, cube_dim, empty_cube_dim, splitsize=splitsize)"
+    "splitted_datasets = split_by_size(df, fname, segmentmap, allocation_dict, galax_prob, cube_dim, empty_cube_dim, n_memory_batches=50, splitsize=splitsize)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26e1866f33d54fe68e0b627bd6b0c85e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/167 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from tqdm.notebook import tqdm\n",
+    "import string\n",
+    "import random\n",
+    "import glob\n",
     "\n",
     "directory = filename.processed.dataset(size, cube_side, transform, prob)\n",
     "\n",
+    "for f in glob.glob('{}/*'.format(directory)):\n",
+    "    os.remove(f)\n",
+    "\n",
     "for i, dataset_split in enumerate(tqdm(splitted_datasets)):\n",
-    "    torch.save(dataset_split, directory + '/split_{}.pt'.format(i))"
+    "    name = ''.join(random.choice(string.ascii_letters) for i in range(20))\n",
+    "    torch.save(dataset_split, directory + '/{}.pt'.format(name))"
    ]
   }
  ],
