Start sofia integration, mostly unfinished

--- a/notebooks/create_dataset.ipynb
+++ b/notebooks/create_dataset.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "size = 'dev_l'\n",
+    "size = 'dev_s'\n",
     "cube_side = 32\n",
     "transform = 'minmax'\n",
     "prob = 50\n",
