--- a/notebooks/create_dataset.ipynb
+++ b/notebooks/create_dataset.ipynb
@@ -50,8 +50,8 @@
     "from utils.data.generating import split_by_size\n",
     "from definitions import config\n",
     "\n",
-    "spatial = config['training']['cube_size']['spatial']\n",
-    "freq = config['training']['cube_size']['freq']\n",
+    "spatial = config['segmentation']['cube_size']['spatial']\n",
+    "freq = config['segmentation']['cube_size']['freq']\n",
     "cube_dim = (spatial, spatial, freq)\n",
     "empty_cube_dim = tuple([c * 2 for c in cube_dim])\n",
     "\n",
